--- a/research/st_02.ipynb
+++ b/research/st_02.ipynb
@@ -144,9 +144,7 @@
     "\n",
     "    @staticmethod\n",
     "    def save_model(path:Path,model:tf.keras.Model):\n",
-    "        model.save(path)\n",
-    "\n",
-    "    "
+    "        model.save(path)\n"
    ]
   },
   {
